# Sneakhub

./: .gitignore  AI_CONTEXT.md  API_SPEC.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  PROJECT_SPEC.md  TASKS.md  docker-compose.yml
Backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
Backend/alembic/: env.py
Backend/alembic/versions/: d7353c302ac7_initial_schema.py
Backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
Backend/app/core/: logging.py
Backend/app/models/: __init__.py  base.py  brand.py  category.py  pipeline_cache.py  pipeline_run.py  sneaker.py  user.py
Backend/app/repositories/: pipeline_repository.py  sneaker_repository.py
Backend/app/routers/: filters.py  health.py  recommendations.py  sneakers.py
Backend/app/schemas/: filter.py  recommendation.py  sneaker.py
Backend/app/services/: filter_service.py  recommendation_service.py  sneaker_service.py
Backend/app/utils/: explanation.py  timing.py
Backend/ml/: README.md  config.py  evaluate.py  features.py  inference.py  pairwise.py  rerank.py  train.py
Backend/ml/artifacts/: feature_columns.json  metrics.json
Backend/pipeline/: README.md  cache.py  clean.py  cloudinary_upload.py  dedupe.py  descriptions.py  enrich_images.py  features.py  images.py  import_csv.py  import_db.py  run.py
Backend/pipeline/search/: __init__.py  base.py  duckduckgo_provider.py  manual_provider.py  query_builder.py  serpapi_provider.py  stockx_provider.py
Backend/scripts/: seed_database.py  test_db_conn.py
frontend/: .gitignore  eslint.config.js  index.html  (+5 more)
(+23 files in other folders)
